Wrapped contentLeft and contentRight into content div for better scaling. Fixed issue with scaling and positioning of the left anf right content divs

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,7 +40,8 @@ body {
 }
 
 #header {
-  
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 #logo {
@@ -57,7 +58,7 @@ body {
 #navBar {
   position: relative;
   left: 50%;
-  margin-top: 0%;
+  margin-top: -1%;
   margin-left: -60px; 
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 16px;
@@ -75,12 +76,42 @@ body {
 }
 
 #content {
-  width: 60.5%;
-  min-width: 29rem;
-  left: 25%;
-  margin-top: 0%;  
+  width: 80%;
+  left: 50%;
+  margin-left: -38%;
+  position: fixed;
+}
+
+#contentLeft {
+  width: 45%;
+  padding-left: 10px;
+  min-width: 0rem;
+  min-height: 100px;
+  margin-left: 0%;
+  margin-right: 1%;
+  margin-top: 0%;
   position: relative;
   background-color: $light;
+  float: right;
+//  background-image:linear-gradient(0deg, rgba(0,0,0,.1), transparent 1rem);
+  box-shadow:
+    inset 0 0 2rem -.08rem rgba(0,0,0,.1);
+  p {
+    font-size: .8rem;
+  }
+}
+
+#contentRight {
+  width: 45%;
+  padding-left: 10px;
+  min-width: 0rem;
+  min-height: 100px;
+  margin-left: 0%;
+  margin-right: 1%;
+  margin-top: 0%;
+  position: relative;
+  background-color: $light;
+  float: right;
 //  background-image:linear-gradient(0deg, rgba(0,0,0,.1), transparent 1rem);
   box-shadow:
     inset 0 0 2rem -.08rem rgba(0,0,0,.1);
